// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.android.designcompose.proto.toolkit;

import "design/variable_collection.proto";
import "design/view.proto";

option java_multiple_files = true;

message SerializedDesignDoc {
  string last_modified = 1;
  map<string, design.View> views = 2;
  EncodedImageMap images = 3;
  string name = 4;
  map<string, string> component_sets = 5;
  string version = 6;
  string id = 7;
  design.VariableMap variable_map = 8;
}

message NodeQuery {
  message NodeVariant {
    string name = 1;
    string parent = 2;
  }
  oneof NodeQuery {
    string node_id = 1;
    string node_name = 2;
    NodeVariant node_variant = 3;
    string node_component_set = 4;
  }
}

message EncodedImageMap {map<string, EncodedImage> images = 1;}

message EncodedImage {
  bytes data = 1;
  string mime_type = 2;
}
